--- a/style.css
+++ b/style.css
@@ -340,6 +340,9 @@ form .btn:hover {
   padding: 25px 50px;
   justify-content: space-between;
 }
+.loanAmount input {
+  height: 25px;
+}
 .loanAmount button {
   border: none;
   width: 150px;
@@ -358,7 +361,7 @@ form .btn:hover {
   justify-content: center;
 }
 .mr-10 {
-  margin-left: 10px;
+  margin-left: -6px;
 }
 
 .totalamt h3 {
@@ -456,4 +459,38 @@ form .btn:hover {
 }
 .about-culture h3 {
   margin-bottom: 20px;
+}
+
+/*Cart Page*/
+.cart-parent-container {
+  max-width: 1024px;
+  margin: auto;
+}
+.cart-box {
+  margin-top: 200px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.cart-box img {
+  height: 150px;
+}
+.cart-desc {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.cart-desc button {
+  width: 70px;
+  border: none;
+  border-radius: 3px;
+  background-color: rgb(145, 255, 95);
+  color: black;
+  cursor: pointer;
+}
+.cart-box input {
+  width: 100px;
+  height: 30px;
+  font-size: 18px;
+  text-align: center;
 }
